[package]
name = "currency-exchange-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.5"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
plotters = "0.3"
anyhow = "1.0"